fix: center on mobile

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -69,3 +69,8 @@
   text-align: center;
   background-size: 100% 100%;
 }
+
+.mobileDiv {
+  display: flex;
+  justify-content: center;
+}
